--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.21.0",
     "vue": "^2.6.12",
-    "vue-hot-reload-api": "^2.3.4"
+    "vue-google-login": "^2.0.5",
+    "vue-hot-reload-api": "^2.3.4",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.0",
