--- a/server/package.json
+++ b/server/package.json
@@ -20,5 +20,8 @@
     "pg": "^8.4.2",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
