--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "vue": "^2.6.12",
+    "vue-google-login": "^2.0.5",
     "vue-hot-reload-api": "^2.3.4"
   },
   "devDependencies": {
