--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "sweetalert": "^2.1.2",
     "vue": "^2.6.12",
     "vue-hot-reload-api": "^2.3.4"
   }
