--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "a": "^2.1.2",
     "axios": "^0.21.0",
     "vue": "^2.6.12",
+    "vue-google-signin-button": "^1.0.4",
     "vue-hot-reload-api": "^2.3.4"
   },
   "devDependencies": {
