--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fetch": "^1.1.0",
+    "google-auth-library": "^6.1.3",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.0",
     "sequelize": "^6.3.5"
