--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,10 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Abdul Rasyid Anshori",
   "license": "ISC"
 }
