--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,10 @@
     "socket.io-client": "^3.0.0",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.12",
+    "vue-authenticate": "^1.4.1",
     "vue-draggable": "^2.0.6",
+    "vue-google-signin-button": "^1.0.4",
+    "vue-google-signin-button-directive": "^1.0.3",
     "vue-hot-reload-api": "^2.3.4",
     "vue-socket.io": "^3.0.10",
     "vue-toastify": "^1.8.0",
