--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.0",
     "sweetalert2": "^10.9.0",
     "vue": "^2.6.12",
+    "vue-google-signin-button-directive": "^1.0.3",
     "vue-hot-reload-api": "^2.3.4"
   }
 }
