--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,13 @@
     "vue-google-signin-button-directive": "^1.0.3",
     "vue-hot-reload-api": "^2.3.4",
     "vue-socket.io": "^3.0.10",
+    "vue-socket.io-extended": "^4.0.5",
     "vue-toastify": "^1.8.0",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.0",
+    "cssnano": "^4.1.10",
     "vue-template-compiler": "^2.6.12"
   }
 }
