--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "vue": "^2.6.12",
     "vue-google-signin-button-directive": "^1.0.3",
