--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "portal-vue": "^2.1.7",
     "vue": "^2.6.12",
     "vue-hot-reload-api": "^2.3.4",
-    "vue-material-design-icons": "^4.10.0"
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.0",
