--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "portal-vue": "^2.1.7",
+    "regenerator-runtime": "^0.13.7",
+    "socket.io-client": "^3.0.0",
     "vue": "^2.6.12",
     "vue-hot-reload-api": "^2.3.4",
     "vuedraggable": "^2.24.3"
@@ -18,5 +20,8 @@
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.0",
     "vue-template-compiler": "^2.6.12"
-  }
+  },
+  "browserslist": [
+    "last 1 Chrome version"
+  ]
 }
