--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "nodemon": "^2.0.6",
     "pg": "^8.4.2",
     "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "socket.io": "^3.0.0"
   },
   "devDependencies": {},
   "scripts": {
