--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "vue": "^2.6.12",
-    "vue-google-signin-button": "^1.0.4",
+    "vue-google-login": "^2.0.5",
     "vue-hot-reload-api": "^2.3.4"
   },
   "devDependencies": {
