--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.0",
+    "cssnano": "^4.1.10",
     "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
     "axios": "^0.21.0",
     "vue": "^2.6.12",
+    "vue-google-login": "^2.0.5",
+    "vue-google-signin-button": "^1.0.4",
     "vue-hot-reload-api": "^2.3.4"
   }
 }
